--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,27 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body, #root {
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
   background-color: #f8fafc;
   font-family: 'Inter', sans-serif;
+}
+
+/* Remove scrollbars */
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: none;
 }
 
 h1 {
